OAKHILL/src/objects/MN_UserOption__c.object
<CustomObject>
    <fields>
        <fullName>Closed_Activities__c</fullName>
        <label>Closed Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Open_Activities__c</fullName>
        <label>Open Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MN_UserOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MN UserOption</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>MN UserOption Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MN UserOptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>